--- a/assets/style.css
+++ b/assets/style.css
@@ -119,9 +119,61 @@ p {
     h3,
     h4 {
         line-height: 1;
+        font-weight: normal;
     }
 }
 
+.section-center{
+    width: 90vw;
+    margin: 0 auto;
+    max-width: var(--max-width);
+}
+
+@media screen and (min-width:992px){
+    .section-center{
+        width: 95vw;
+    }
+}
+
+.btn{
+    background-color: var(--clr-primary-2);
+    color: var(--clr-white);
+    padding: 0.375rem 0.75rem;
+    transition:var(--transition);
+    font-size: 0.875rem;
+    display: inline-block;
+    font-family: var(--ff-primary);
+    border:2px solid transparent;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    border-radius: var(--radius);
+}
+
+.btn:hover{
+    color: var(--clr-primary-1);
+    background-color: var(--clr-primary-3);
+}
+
+.underline{
+    width: 5rem;
+    height: 0.25rem;
+    background: var(--clr-primary-2);
+    margin-bottom: 0.25rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.social-icons{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
+    column-gap: 2rem;
+    margin-top: 3rem;
+}
+
+.social-icons i:hover{
+    color: var(--clr-grey-2);
+}
 /* Navbar Style 
 ===================== */
 
@@ -198,7 +250,7 @@ nav{
     top:0;
     right:0;
     background-color: var(--clr-white);
-    box-shadow: light;
+    z-index: 3;
 }
 
 /* Sidebar 
@@ -271,5 +323,65 @@ nav{
 
 .hero{
     height: 130vh;
-    background-color: white;
+    background-color: var(--clr-primary-5);
+}
+.hero-center{
+    min-height: calc(100vh - 4.5rem);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+}
+
+.hero .underline{
+    margin-right: 0;
+    margin-bottom: 1rem;
+}
+
+.hero-image{
+    display: none;
+}
+
+.hero-info h2{
+    margin-bottom: 2rem;
+}
+
+.hero-info h4{
+    color: var(--clr-grey-2);
+    font-weight: 300;
+    margin-bottom: 2rem;
+}
+
+.hero-btn{
+    margin-top: 0.25rem;
+}
+
+.hero-icons{
+    justify-items: start;
+}
+.hero-icons i{
+    font-size: 1.3rem;
+    color: var(--clr-grey-1);
+}
+
+@media (min-width: 992px){
+    .hero-image{
+        display: block;
+        position: relative;
+    }
+    .hero-photo{
+        max-width: 25rem;
+        max-height: 30rem;
+        object-fit: cover;
+        border-radius: var(--radius);
+        position: relative;
+    } commi
+    .hero-image::before{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border: 0.25rem solid var(--clr-grey-2);
+        top:2rem;
+        right: -2rem;
+    }
 }
